--- a/blog.html
+++ b/blog.html
@@ -22,17 +22,17 @@
 
     <div class="important">
     <ol>
-      <li>Wool yarn</li>
+      <li><span class=yarn-type>Wool yarn</span></li>
         <ul>
-          <li>Fine wool</li>
-          <li>Medium wool</li>
-          <li>Long wool</li>
-          <li>Double wool</li>
+          <li><span class=yarn-subset>Fine wool</span></li>
+          <li><span class=yarn-subset>Medium wool</span></li>
+          <li><span class=yarn-subset>Long wool</span></li>
+          <li><span class=yarn-subset>Double wool</span></li>
         </ul>
 
-      <li>Cashmere yarn</li>
-      <li>Alpaca yarn</li>
-      <li>Multi fiber yarn</li>
+      <li><span class=yarn-type>Cashmere yarn</span></li>
+      <li><span class=yarn-type>Alpaca yarn</span></li>
+      <li><span class=yarn-type>Multi fiber yar</span>n</li>
     </ol>
     </div>
 
